[package]
name = "abspath"
version = "1.0.0"
authors = ["m <mhmorgan42@gmail.com>"]
edition = "2018"
description = "A simple program to print the absolute path of a file."
readme = "README.md"
keywords = ["cli"]
license = "BSD-3-Clause"
repository = "https://github.com/MHmorgan/abspath"
documentation = "https://docs.rs/abspath"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
mhlog = "1.0.1"
